--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@u4/opencv4nodejs": "^7.1.2",
+    "node-easyocr": "^1.0.7",
     "node-tesseract-ocr": "^2.2.1",
     "winston": "^3.14.2"
   },
